--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "deploy": "npm run build && netlify deploy --prod"
+    "deploy": "npm run build && node ./generate-sitemap.js && netlify deploy --prod"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -17,9 +17,11 @@
     "next-seo": "^4.7.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-number-format": "^4.4.4",
     "sass": "^1.26.10"
   },
   "devDependencies": {
+    "nextjs-sitemap-generator": "^1.1.3",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.5.2"
   }
